--- a/index.html
+++ b/index.html
@@ -1,80 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="description" content="This is a static HTML5 page template that's SEO compliant and responsive.">
-  <title>Static HTML5 Page Template</title>
-  <style>
-    /* Add some basic styles */
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
-    h1 {
-      text-align: center;
-      font-size: 2rem;
-      margin: 1rem;
-    }
-
-    p {
-      font-size: 1rem;
-      margin: 0.5rem;
-    }
-
-    ul {
-      list-style: none;
-      margin: 0.5rem;
-    }
-
-    li {
-      margin: 0.5rem;
-    }
-
-    /* Use media queries to make the template responsive */
-    @media (min-width: 768px) {
-      /* Use a two-column layout for larger screens */
-      .container {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-      }
-
-      .left {
-        width: 40%;
-        margin: 1rem;
-      }
-
-      .right {
-        width: 50%;
-        margin: 1rem;
-      }
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="This is a static HTML5 page template that's SEO compliant and responsive.">
+    <title>Chad Adams.com</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
-  <h1>Static HTML5 Page Template</h1>
-  <div class="container">
-    <div class="left">
-      <p>This is a static HTML5 page template that's SEO compliant and responsive. You can use it to create your own web pages.</p>
-      <p>Some features of this template are:</p>
-      <ul>
-        <li>It uses the HTML5 doctype declaration and the lang attribute.</li>
-        <li>It includes the meta tags for character encoding, viewport, compatibility and description.</li>
-        <li>It has a clear and concise title tag.</li>
-        <li>It uses semantic HTML elements such as h1, p and ul.</li>
-        <li>It has a simple and clean layout.</li>
-        <li>It uses media queries to adjust the layout according to the screen size.</li>
-      </ul>
-    </div>
-    <div class="right">
-      <p>You can modify this template as you wish. Have fun!</p>
-      <p>Here is a sample image to show how the template looks on different devices:</p>
-      <img src="https://via.placeholder.com/500x300" alt="Sample image">
-    </div>
-  </div>
+    <section>
+        <div class="container">
+            <h1>Static HTML5 Page Template</h1>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="left">
+                <p>This is a static HTML5 page template that's SEO compliant and responsive. You can use it to create your own
+                    web pages.</p>
+                <p>Some features of this template are:</p>
+                <ul>
+                    <li>It uses the HTML5 doctype declaration and the lang attribute.</li>
+                    <li>It includes the meta tags for character encoding, viewport, compatibility and description.</li>
+                    <li>It has a clear and concise title tag.</li>
+                    <li>It uses semantic HTML elements such as h1, p and ul.</li>
+                    <li>It has a simple and clean layout.</li>
+                    <li>It uses media queries to adjust the layout according to the screen size.</li>
+                </ul>
+            </div>
+            <div class="right">
+                <p>You can modify this template as you wish. Have fun!</p>
+                <p>Here is a sample image to show how the template looks on different devices:</p>
+                <img src="https://via.placeholder.com/500x300" alt="Sample image" />
+            </div>
+        </div>
+    </section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
 </body>
+
 </html>
