--- a/index.html
+++ b/index.html
@@ -13,9 +13,17 @@
 <body>
     <section>
         <div class="container">
-            <h1>Static HTML5 Page Template</h1>
+            <h1>Hello, I'm <b>Chad Adams</b></h1>
         </div>
     </section>
+    <section>
+        <h2>Who am I?</h2>
+        <div class="container">
+            <p>I'm a web developer and designer from the United States. I'm passionate about creating websites that are
+                accessible, responsive and user-friendly.</p>
+        </div>
+    </section>
+    <section></section>
     <section>
         <div class="container">
             <div class="left">
@@ -40,8 +48,8 @@
     </section>
     <section></section>
     <section></section>
-    <section></section>
-    <section></section>
 </body>
 
 </html>
+
+
