--- a/index.html
+++ b/index.html
@@ -17,10 +17,16 @@
         </div>
     </section>
     <section>
-        <h2>Who am I?</h2>
         <div class="container">
-            <p>I'm a web developer and designer from the United States. I'm passionate about creating websites that are
-                accessible, responsive and user-friendly.</p>
+            <div class="left">
+                <h2>Who am I?</h2>
+                <p>I'm a UX Professional with over 16 years of experience. I have designed and developed small to enterprise web, mobile and desktop applications across multiple platforms. I'm also an EMBA which I use to lead development teams and show ROI for applications developed once completed.</p>
+            </div>
+            <div class="right">
+                <p>You can modify this template as you wish. Have fun!</p>
+                <p>Here is a sample image to show how the template looks on different devices:</p>
+                <img src="https://via.placeholder.com/500x300" alt="Sample image" />
+            </div>
         </div>
     </section>
     <section></section>
@@ -51,5 +57,3 @@
 </body>
 
 </html>
-
-
