--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <meta name="description" content="This is a static HTML5 page template that's SEO compliant and responsive.">
     <title>Chad Adams.com</title>
     <link rel="stylesheet" href="styles.css" />
+    <script defer src="app.js"></script>
 </head>
 
 <body>
-    <section>
-        <h1>Hello, I'm <b>Chad Adams</b></h1>
+    <section class="hidden">
+        <h1>Hello, my name is <b>Chad Adams</b></h1>
     </section>
-    <section>
+    <section class="hidden">
         <div class="container">
             <div class="left">
                 <h2>Who am I?</h2>
@@ -27,31 +28,8 @@
             </div>
         </div>
     </section>
-    <section></section>
-    <section>
-        <div class="container">
-            <div class="left">
-                <p>This is a static HTML5 page template that's SEO compliant and responsive. You can use it to create your own
-                    web pages.</p>
-                <p>Some features of this template are:</p>
-                <ul>
-                    <li>It uses the HTML5 doctype declaration and the lang attribute.</li>
-                    <li>It includes the meta tags for character encoding, viewport, compatibility and description.</li>
-                    <li>It has a clear and concise title tag.</li>
-                    <li>It uses semantic HTML elements such as h1, p and ul.</li>
-                    <li>It has a simple and clean layout.</li>
-                    <li>It uses media queries to adjust the layout according to the screen size.</li>
-                </ul>
-            </div>
-            <div class="right">
-                <p>You can modify this template as you wish. Have fun!</p>
-                <p>Here is a sample image to show how the template looks on different devices:</p>
-                <img src="https://via.placeholder.com/500x300" alt="Sample image" />
-            </div>
-        </div>
-    </section>
-    <section></section>
-    <section></section>
+    <section class="hidden"></section>
+    <section class="hidden"></section>
 </body>
 
 </html>
