--- a/index.html
+++ b/index.html
@@ -12,24 +12,25 @@
 </head>
 
 <body>
-    <section class="hidden">
-        <h1>Hello, my name is <b>Chad Adams</b></h1>
+    <section>
+        <h1 class="hidden">Hello, my name is <b>Chad Adams</b></h1>
     </section>
-    <section class="hidden">
+    <section>
         <div class="container">
-            <div class="left">
+            <div class="left hidden">
                 <h2>Who am I?</h2>
                 <p>I'm a UX Professional with over 16 years of experience. I have designed and developed small to enterprise web, mobile and desktop applications across multiple platforms. I'm also an EMBA which I use to lead development teams and show ROI for applications developed once completed.</p>
             </div>
-            <div class="right">
+            <div class="right hidden">
                 <p>You can modify this template as you wish. Have fun!</p>
                 <p>Here is a sample image to show how the template looks on different devices:</p>
                 <img src="https://via.placeholder.com/500x300" alt="Sample image" />
             </div>
         </div>
     </section>
-    <section class="hidden"></section>
-    <section class="hidden"></section>
+    <section></section>
+    <section></section>
+    <section></section>
 </body>
 
 </html>
