--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="This is a static HTML5 page template that's SEO compliant and responsive.">
     <title>Chad Adams.com</title>
+    <base href="https://www.chadadams.com/" target="_self" />
     <link rel="stylesheet" href="styles.css" />
     <script defer src="app.js"></script>
 </head>
@@ -44,3 +45,7 @@
 </body>
 
 </html>
+
+
+
+
