--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <title>Chad Adams.com</title>
     <base href="https://www.chadadams.com/" target="_self" />
     <link rel="stylesheet" href="styles.css" />
+    
+    <script type="text/javascript" src="https://www.bing.com/api/maps/mapcontrol?callback=GetMap&amp;key=AtMtouCYY3vQVhosyvd_s8iijwQrGK8s4bVB73KSiT4biOeiViMZilJcNAwiJDHu" async="" defer=""></script>
     <script defer src="app.js"></script>
+    <script defer src="GetMap.js"></script>
 </head>
 
 <body>
@@ -45,7 +48,3 @@
 </body>
 
 </html>
-
-
-
-
