--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta itemprop="image" content="http://vidstoragepersonalsite.blob.core.windows.net/videos/ogimage.jpg" />
 
     <title>Chad Adams.com</title>
-    <base href="https://www.chadadams.com/" target="_self" />
+    <!-- <base href="https://www.chadadams.com/" target="_self" /> -->
     <link rel="stylesheet" href="styles.css" />
     
     <script type="text/javascript" src="https://www.bing.com/api/maps/mapcontrol?callback=GetMap&amp;key=AtMtouCYY3vQVhosyvd_s8iijwQrGK8s4bVB73KSiT4biOeiViMZilJcNAwiJDHu" async="" defer=""></script>
