--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
     <script type="text/javascript" src="https://www.bing.com/api/maps/mapcontrol?callback=GetMap&amp;key=AtMtouCYY3vQVhosyvd_s8iijwQrGK8s4bVB73KSiT4biOeiViMZilJcNAwiJDHu" async="" defer=""></script>
     <script defer src="app.js"></script>
-    <script defer src="GetMap.js"></script>
+    <script defer src="getMap.js"></script>
 </head>
 
 <body>
