--- a/index.html
+++ b/index.html
@@ -39,7 +39,17 @@
             </div>
         </div>
     </section>
-    <section></section>
+    <section>
+        <div class="container">
+            <div class="left hidden">
+                <h2>Consulting</h2>
+                <p>Businesses don't work only in one region, sometimes to make things work, you need to go and help customers where they are located. With 10+ years consulting experience I've learned how to travel and work in my region or abroad.</p>
+            </div>
+            <div class="right hidden">
+              <div id="myMap" style="position:relative;width:100%;height:300px;"></div>
+            </div>
+        </div>
+    </section>
     <section>
         <div class="container">
             <div class="left hidden">
