--- a/index.html
+++ b/index.html
@@ -53,8 +53,11 @@
     <section>
         <div class="container">
             <div class="left hidden">
-                <h2>Consulting</h2>
-                <p>Businesses don't work only in one region, sometimes to make things work, you need to go and help customers where they are located. With 10+ years consulting experience I've learned how to travel and work in my region or abroad.</p>
+                <h2>Types of work I do</h2>
+                <h3>Web Application Development 🕸</h3>
+                <p>Using the latest technologies like React, Angular &amp; TypeScript, I can create amazing web applications for your business.</p>
+                <h3>Data Visulization</h3>
+                <p>Using the latest technologies like D3.js, I can create amazing data visualizations for your business.</p>
             </div>
             <div class="right hidden">
                 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/jnz52whx6SE?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
