--- a/index.html
+++ b/index.html
@@ -56,8 +56,12 @@
                 <h2>Types of work I do</h2>
                 <h3>Web Application Development 🕸</h3>
                 <p>Using the latest technologies like React, Angular &amp; TypeScript, I can create amazing web applications for your business.</p>
-                <h3>Data Visulization</h3>
+                <h3>User Experience <abbr>(UX)</abbr> Design</h3>
+                <p>I can also develop application flows using my background in design and accessiblity</p>
+                <h3>Data Visulization 📊</h3>
                 <p>Using the latest technologies like D3.js, I can create amazing data visualizations for your business.</p>
+                <h3>Business Analysis</h3>
+                <p>As part of my UX experience background, along with my EMBA I can analyse business strategies for applications/designs/and customer needs to maximize ROI for any project.</p>
             </div>
             <div class="right hidden">
                 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/jnz52whx6SE?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
