--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="Chad Adams is an Web Application Architect, UI Engineer, UX Designer, and tech author with 18+ years experience" />
-    <meta name="keywords" content="Chad Adams, Chad R Adams, Web Application Architect, UI Engineer, UX Designer, technology author, speaker, Microsoft, Software Architect, HTML5, JavaScript, TypeScript, React, Electron, Linux" />
+    <meta name="description"
+        content="Chad Adams is an Web Application Architect, UI Engineer, UX Designer, and tech author with 18+ years experience" />
+    <meta name="keywords"
+        content="Chad Adams, Chad R Adams, Web Application Architect, UI Engineer, UX Designer, technology author, speaker, Microsoft, Software Architect, HTML5, JavaScript, TypeScript, React, Electron, Linux" />
     <meta name="og:type" content="website" />
     <meta name="og:url" content="https://chadadams.com/" />
     <meta name="og:site_name" content="Chad Adams.com" />
@@ -16,8 +18,10 @@
     <title>Chad Adams.com</title>
     <!-- <base href="https://www.chadadams.com/" target="_self" /> -->
     <link rel="stylesheet" href="styles.css" />
-    
-    <script type="text/javascript" src="https://www.bing.com/api/maps/mapcontrol?callback=GetMap&amp;key=AtMtouCYY3vQVhosyvd_s8iijwQrGK8s4bVB73KSiT4biOeiViMZilJcNAwiJDHu" async="" defer=""></script>
+
+    <script type="text/javascript"
+        src="https://www.bing.com/api/maps/mapcontrol?callback=GetMap&amp;key=AtMtouCYY3vQVhosyvd_s8iijwQrGK8s4bVB73KSiT4biOeiViMZilJcNAwiJDHu"
+        async="" defer=""></script>
     <script defer src="app.js"></script>
     <script defer src="getMap.js"></script>
 </head>
@@ -28,25 +32,22 @@
     </section>
     <section>
         <div class="container">
-            <div class="left hidden">
-                <h2>Who am I?</h2>
-                <p>I'm a UX Professional with over 16 years of experience. I have designed and developed small to enterprise web, mobile and desktop applications across multiple platforms. I'm also an EMBA which I use to lead development teams and show ROI for applications developed once completed.</p>
-            </div>
-            <div class="right hidden">
-                <p>You can modify this template as you wish. Have fun!</p>
-                <p>Here is a sample image to show how the template looks on different devices:</p>
-                <img src="https://via.placeholder.com/500x300" alt="Sample image" />
-            </div>
+            <h2>Who am I?</h2>
+            <p>I'm a UX Professional with over 16 years of experience. I have designed and developed small to enterprise
+                web, mobile and desktop applications across multiple platforms. I'm also an EMBA which I use to lead
+                development teams and show ROI for applications developed once completed.</p>
         </div>
     </section>
     <section>
         <div class="container">
             <div class="left hidden">
                 <h2>Consulting</h2>
-                <p>Businesses don't work only in one region, sometimes to make things work, you need to go and help customers where they are located. With 10+ years consulting experience I've learned how to travel and work in my region or abroad.</p>
+                <p>Businesses don't work only in one region, sometimes to make things work, you need to go and help
+                    customers where they are located. With 10+ years consulting experience I've learned how to travel
+                    and work in my region or abroad.</p>
             </div>
             <div class="right hidden">
-              <div id="myMap" style="position:relative;width:100%;height:300px;"></div>
+                <div id="myMap" style="position:relative;width:100%;height:300px;"></div>
             </div>
         </div>
     </section>
@@ -55,16 +56,22 @@
             <div class="left hidden">
                 <h2>Types of work I do</h2>
                 <h3>Web Application Development 👨‍💻</h3>
-                <p>Using the latest technologies like React, Angular &amp; TypeScript, I can create amazing web applications for your business.</p>
+                <p>Using the latest technologies like React, Angular &amp; TypeScript, I can create amazing web
+                    applications for your business.</p>
                 <h3>User Experience <abbr>(UX)</abbr> Design</h3>
                 <p>I can also develop application flows using my background in design and accessiblity</p>
                 <h3>Data Visulization 📊</h3>
-                <p>Using the latest technologies like D3.js, I can create amazing data visualizations for your business.</p>
+                <p>Using the latest technologies like D3.js, I can create amazing data visualizations for your business.
+                </p>
                 <h3>Business Analysis 💼</h3>
-                <p>As part of my UX experience background, along with my EMBA I can analyse business strategies for applications/designs/and customer needs to maximize ROI for any project.</p>
+                <p>As part of my UX experience background, along with my EMBA I can analyse business strategies for
+                    applications/designs/and customer needs to maximize ROI for any project.</p>
             </div>
             <div class="right hidden">
-                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/jnz52whx6SE?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/jnz52whx6SE?controls=0"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
             </div>
         </div>
     </section>
