--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <meta name="og:type" content="website" />
     <meta name="og:url" content="https://chadadams.com/" />
     <meta name="og:site_name" content="Chad Adams.com" />
-    <meta name="og:image" content="http://vidstoragepersonalsite.blob.core.windows.net/videos/ogimage.jpg" />
-    <meta itemprop="image" content="http://vidstoragepersonalsite.blob.core.windows.net/videos/ogimage.jpg" />
+    <meta name="og:image" content="ogimage.jpg" />
+    <meta itemprop="image" content="ogimage.jpg" />
 
     <title>Chad Adams.com</title>
     <!-- <base href="https://www.chadadams.com/" target="_self" /> -->
