--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     development teams and show ROI for applications developed once completed.</p>
             </div>
             <div class="right hidden">
-                <img src="IMG_9412-Edit-min.jpg" alt="Photo of Chad Adams" />
+                <img src="IMG_9412-Edit-min.jpg" alt="Photo of Chad Adams" width="300" />
             </div>
         </div>
     </section>
