--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <body>
     <section>
-        <h1 class="hidden">Hello, my name is <b>Chad Adams</b></h1>
+        <h1 class="hidden">Hello, my name is <b>Chad Adams</b>...</h1>
     </section>
     <section>
         <div class="container">
