--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             <div class="left hidden">
                 <h2>Who am I?</h2>
                 <p>I'm a UX Professional with over 16 years of experience. I have designed and developed small to enterprise
-                    web, mobile and desktop applications across multiple platforms. I'm also an EMBA which I use to lead
-                    development teams and show ROI for applications developed once completed.</p>
+                    web, mobile and desktop applications across multiple platforms. I'm also have a Batchlors in Commercial Art, and a EMBA which I use to lead
+                    development teams and show return on investment, and capture user feedback for future improvements for applications developed once completed.</p>
             </div>
             <div class="right hidden">
                 <img class="portrait responsive" src="IMG_9412-Edit-min.jpg" alt="Photo of Chad Adams" />
@@ -47,8 +47,8 @@
         <div class="container">
             <div class="left hidden">
                 <h2>Consulting</h2>
-                <p>Businesses don't work only in one region, sometimes to make things work, you need to go and help
-                    customers where they are located. With 10+ years consulting experience I've learned how to travel
+                <p>Businesses don't work only in one region, sometimes to make things work, you need to go on-site and help
+                    customers where they are located. With 16 years consulting experience I've learned how to travel
                     and work in my region or abroad.</p>
             </div>
             <div class="right hidden">
@@ -73,7 +73,7 @@
                     applications/designs/and customer needs to maximize ROI for any project.</p>
             </div>
             <div class="right hidden">
-                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/jnz52whx6SE?controls=0"
+                <iframe src="https://www.youtube-nocookie.com/embed/jnz52whx6SE?controls=0"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
