--- a/index.html
+++ b/index.html
@@ -34,25 +34,18 @@
         <div class="container">
             <div class="left hidden">
                 <h2>Who am I?</h2>
-                <p>I'm a UX Professional with over 16 years of experience. I have designed and developed small to enterprise
-                    web, mobile and desktop applications across multiple platforms. I'm also have a Batchlors in Commercial Art, and a EMBA which I use to lead
-                    development teams and show return on investment, and capture user feedback for future improvements for applications developed once completed.</p>
+                <p>I'm a UX Professional with over 16 years of experience. I have designed and developed small to
+                    enterprise web, mobile and desktop applications across multiple platforms. I'm also have a BFA in
+                    Commercial Art, and a Executive MBA which I use to lead
+                    development teams and show return on investment, and capture user feedback for future improvements
+                    for applications developed once completed.</p>
+                <p>I've been designing and building web sites and web apps since high school back when I used 🗒
+                    <strong>notepad.exe</strong> using <a href="https://en.wikipedia.org/wiki/Yahoo!_GeoCities"
+                        hreflang="en-us" target="_blank">Geocities</a>.
+                </p>
             </div>
             <div class="right hidden">
                 <img class="portrait responsive" src="IMG_9412-Edit-min.jpg" alt="Photo of Chad Adams" />
-            </div>
-        </div>
-    </section>
-    <section>
-        <div class="container">
-            <div class="left hidden">
-                <h2>Consulting</h2>
-                <p>Businesses don't work only in one region, sometimes to make things work, you need to go on-site and help
-                    customers where they are located. With 16 years consulting experience I've learned how to travel
-                    and work in my region or abroad.</p>
-            </div>
-            <div class="right hidden">
-                <div id="myMap" style="position:relative;width:100%;height:300px;"></div>
             </div>
         </div>
     </section>
@@ -66,21 +59,51 @@
                 <h3>User Experience <abbr>(UX)</abbr> Design</h3>
                 <p>I can also develop application flows using my background in design and accessiblity</p>
                 <h3>Data Visulization 📊</h3>
-                <p>Using the latest technologies like D3.js, I can create amazing data visualizations for your business.
+                <p>Using the latest technologies like <a target="_blank" href="https://d3js.org/"
+                        hreflang="en-us">D3.js</a> I can create amazing data visualizations for your business.
                 </p>
                 <h3>Business Analysis 💼</h3>
                 <p>As part of my UX experience background, along with my EMBA I can analyse business strategies for
                     applications/designs/and customer needs to maximize ROI for any project.</p>
             </div>
             <div class="right hidden">
-                <iframe src="https://www.youtube-nocookie.com/embed/jnz52whx6SE?controls=0"
-                    title="YouTube video player" frameborder="0"
+                <iframe src="https://www.youtube-nocookie.com/embed/jnz52whx6SE?controls=0" title="YouTube video player"
+                    frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
             </div>
         </div>
     </section>
-    <section></section>
+    <section>
+        <div class="container">
+            <div class="left hidden">
+                <h2>Consulting</h2>
+                <p>Businesses don't work only in one region, sometimes to make things work, you need to go on-site and
+                    help
+                    customers where they are located. With 16 years consulting experience I've learned how to travel
+                    and work in my region or abroad.</p>
+            </div>
+            <div class="right hidden">
+                <div id="myMap" style="position:relative;width:100%;height:300px;"></div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        div class="container">
+        <div class="left hidden">
+            <h2>Client work</h2>
+            <p><strong>Since 2006,</strong> I've been working professionally as a user experience designer, software
+                developer, and business analyst. Over the years my track record has improved as well as the clients I
+                assist in my current and past roles. Working both with <span title="big">🏢</span> and <span
+                    title="small">🏪</span> businesses globally, gives me a wide range of capabilities to best serve
+                customers and their end users.</p>
+        </div>
+        <div class="right hidden">
+            <h3>Customers served</h3>
+        </div>
+        </div>
+    </section>
 </body>
 
 </html>
