--- a/index.html
+++ b/index.html
@@ -90,18 +90,19 @@
     </section>
 
     <section>
-        div class="container">
-        <div class="left hidden">
-            <h2>Client work</h2>
-            <p><strong>Since 2006,</strong> I've been working professionally as a user experience designer, software
-                developer, and business analyst. Over the years my track record has improved as well as the clients I
-                assist in my current and past roles. Working both with <span title="big">🏢</span> and <span
-                    title="small">🏪</span> businesses globally, gives me a wide range of capabilities to best serve
-                customers and their end users.</p>
-        </div>
-        <div class="right hidden">
-            <h3>Customers served</h3>
-        </div>
+        <div class="container">
+            <div class="left hidden">
+                <h2>Client work</h2>
+                <p><strong>Since 2006,</strong> I've been working professionally as a user experience designer, software
+                    developer, and business analyst. Over the years my track record has improved as well as the clients
+                    I
+                    assist in my current and past roles. Working both with <span title="big">🏢</span> and <span
+                        title="small">🏪</span> businesses globally, gives me a wide range of capabilities to best serve
+                    customers and their end users.</p>
+            </div>
+            <div class="right hidden">
+                <h3>Customers served</h3>
+            </div>
         </div>
     </section>
 </body>
