--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         hreflang="en-us">D3.js</a> I can create amazing data visualizations for your business.
                 </p>
                 <h3>Business Analysis 💼</h3>
-                <p>As part of my UX experience background, along with my EMBA I can analyse business strategies for
+                <p>As part of my UX experience background, along with my Executive MBA I can analyse business strategies for
                     applications/designs/and customer needs to maximize ROI for any project.</p>
             </div>
             <div class="right hidden">
