--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
 <body>
     <section>
+        <div></div>
         <h1 class="hidden">Hello, my name is <b>Chad Adams</b>...</h1>
     </section>
     <section>
@@ -35,13 +36,11 @@
             <div class="left hidden">
                 <h2>Who am I?</h2>
                 <p>I'm a UX Professional with over 16 years of experience. I have designed and developed small to
-                    enterprise web, mobile and desktop applications across multiple platforms. I'm also have a BFA in
+                    enterprise web, mobile and desktop applications across multiple platforms. I'm also have a Bachelors
+                    of Fine Arts in
                     Commercial Art, and a Executive MBA which I use to lead
                     development teams and show return on investment, and capture user feedback for future improvements
                     for applications developed once completed.</p>
-                <p>I've been designing and building web sites and web apps since high school back when I used 🗒
-                    <strong>notepad.exe</strong> using <a href="https://en.wikipedia.org/wiki/Yahoo!_GeoCities"
-                        hreflang="en-us" target="_blank">Geocities</a>.
                 </p>
             </div>
             <div class="right hidden">
@@ -53,17 +52,18 @@
         <div class="container">
             <div class="left hidden">
                 <h2>Types of work I do</h2>
-                <h3>Web Application Development 👨‍💻</h3>
+                <h3>Web Application Development <i aria-label="Male Programmer">👨‍💻</i></h3>
                 <p>Using the latest technologies like React, Angular &amp; TypeScript, I can create amazing web
                     applications for your business.</p>
-                <h3>User Experience <abbr>(UX)</abbr> Design</h3>
+                <h3>User Experience <abbr>(UX)</abbr> Design <i aria-label="Art Pallet">🎨</i></h3>
                 <p>I can also develop application flows using my background in design and accessiblity</p>
-                <h3>Data Visulization 📊</h3>
+                <h3>Data Visulization <i aria-label="Data Visulization Chart">📊</i></h3>
                 <p>Using the latest technologies like <a target="_blank" href="https://d3js.org/"
                         hreflang="en-us">D3.js</a> I can create amazing data visualizations for your business.
                 </p>
-                <h3>Business Analysis 💼</h3>
-                <p>As part of my UX experience background, along with my Executive MBA I can analyse business strategies for
+                <h3>Business Analysis <i aria-label="Briefcase">💼</i></h3>
+                <p>As part of my UX experience background, along with my Executive MBA I can analyse business strategies
+                    for
                     applications/designs/and customer needs to maximize ROI for any project.</p>
             </div>
             <div class="right hidden">
@@ -104,6 +104,24 @@
                 <h3>Customers served</h3>
             </div>
         </div>
+    </section>
+    <section class="hidden">
+        <h2>Contact Me</h2>
+        <p>Looking for someone with my skillsets, professional exprience, something else? You can reach me below.</p>
+        <div id="contactInfo">
+            <div>
+                <h3>Phone</h3>
+                <p><a href="tel:+1-816-808-5475">+1-816-808-5475</a></p>
+            </div>
+            <div>
+                <h3>Email</h3>
+                <p><a href="mailto:chadradams@outlook.com">chadradams@outlook.com</a>
+            </div>
+            <div>
+                <h3>Social</h3>
+                <p><a href="https://www.linkedin.com/in/chadradams/" target="_blank">LinkedIn</a></p>
+                <p><a href="https://github.com/chadradams" target="_blank">GitHub</a></p>
+            </div>
     </section>
 </body>
 
