--- a/index.html
+++ b/index.html
@@ -33,18 +33,20 @@
     </section>
     <section>
         <div class="container">
-            <div class="left hidden">
-                <h2>Who am I?</h2>
-                <p>I'm a UX Professional with over 16 years of experience. I have designed and developed small to
-                    enterprise web, mobile and desktop applications across multiple platforms. I'm also have a Bachelors
-                    of Fine Arts in
-                    Commercial Art, and a Executive MBA which I use to lead
-                    development teams and show return on investment, and capture user feedback for future improvements
-                    for applications developed once completed.</p>
-                </p>
-            </div>
-            <div class="right hidden">
-                <img class="portrait responsive" src="IMG_9412-Edit-min.jpg" alt="Photo of Chad Adams" />
+            <div class="aboutme hidden">
+                <div>
+                    <h2>Who am I?</h2>
+                    <p>I'm a UX Professional with over 16 years of experience. I have designed and developed small to
+                        enterprise web, mobile and desktop applications across multiple platforms. I'm also have a Bachelors
+                        of Fine Arts in
+                        Commercial Art, and a Executive MBA which I use to lead
+                        development teams and show return on investment, and capture user feedback for future improvements
+                        for applications developed once completed.</p>
+                    </p>
+                </div>
+                <div class="">
+                    <img class="portrait responsive" src="IMG_9412-Edit-min.jpg" alt="Photo of Chad Adams" />
+                </div>
             </div>
         </div>
     </section>
