--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
                 <div>
                     <h2>Who am I?</h2>
                     <p>I'm a UX Professional with over 16 years of experience. I have designed and developed small to
-                        enterprise web, mobile and desktop applications across multiple platforms. I'm also have a Bachelors
+                        enterprise web, mobile and desktop applications across multiple platforms. I'm also have a
+                        Bachelors
                         of Fine Arts in
                         Commercial Art, and a Executive MBA which I use to lead
-                        development teams and show return on investment, and capture user feedback for future improvements
+                        development teams and show return on investment, and capture user feedback for future
+                        improvements
                         for applications developed once completed.</p>
                     </p>
                 </div>
@@ -110,20 +112,13 @@
     <section class="hidden">
         <h2>Contact Me</h2>
         <p>Looking for someone with my skillsets, professional exprience, something else? You can reach me below.</p>
-        <div id="contactInfo">
-            <div>
-                <h3>Phone</h3>
-                <p><a href="tel:+1-816-808-5475">+1-816-808-5475</a></p>
-            </div>
-            <div>
-                <h3>Email</h3>
-                <p><a href="mailto:chadradams@outlook.com">chadradams@outlook.com</a>
-            </div>
-            <div>
-                <h3>Social</h3>
-                <p><a href="https://www.linkedin.com/in/chadradams/" target="_blank">LinkedIn</a></p>
-                <p><a href="https://github.com/chadradams" target="_blank">GitHub</a></p>
-            </div>
+        <h3>Phone</h3>
+        <p><a href="tel:+1-816-808-5475">+1-816-808-5475</a></p>
+        <h3>Email</h3>
+        <p><a href="mailto:chadradams@outlook.com">chadradams@outlook.com</a>
+        <h3>Social</h3>
+        <p><a href="https://www.linkedin.com/in/chadradams/" target="_blank">LinkedIn</a></p>
+        <p><a href="https://github.com/chadradams" target="_blank">GitHub</a></p>
     </section>
 </body>
 
