--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
         <div class="container">
             <div class="left hidden">
                 <h2>Types of work I do</h2>
-                <h3>Web Application Development <i aria-label="Male Programmer">👨‍💻</i></h3>
+                <h3>Web Application Development <span aria-label="Male Programmer">👨‍💻</span></h3>
                 <p>Using the latest technologies like React, Angular &amp; TypeScript, I can create amazing web
                     applications for your business.</p>
-                <h3>User Experience <abbr>(UX)</abbr> Design <i aria-label="Art Pallet">🎨</i></h3>
+                <h3>User Experience <abbr>(UX)</abbr> Design <span aria-label="Art Pallet">🎨</span></h3>
                 <p>I can also develop application flows using my background in design and accessiblity</p>
-                <h3>Data Visulization <i aria-label="Data Visulization Chart">📊</i></h3>
+                <h3>Data Visulization <span aria-label="Data Visulization Chart">📊</span></h3>
                 <p>Using the latest technologies like <a target="_blank" href="https://d3js.org/"
                         hreflang="en-us">D3.js</a> I can create amazing data visualizations for your business.
                 </p>
-                <h3>Business Analysis <i aria-label="Briefcase">💼</i></h3>
+                <h3>Business Analysis <span aria-label="Briefcase">💼</span></h3>
                 <p>As part of my UX experience background, along with my Executive MBA I can analyse business strategies
                     for
                     applications/designs/and customer needs to maximize ROI for any project.</p>
