--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </div>
     </section>
     <section>
-        <div class="hidden">
+        <div class="hidden container">
             <h2>Contact Me</h2>
             <p>Looking for someone with my skillsets, professional exprience, something else? You can reach me below.
             </p>
