--- a/index.html
+++ b/index.html
@@ -99,9 +99,7 @@
                 <h2>Client work</h2>
                 <p><strong>Since 2006,</strong> I've been working professionally as a user experience designer, software
                     developer, and business analyst. Over the years my track record has improved as well as the clients
-                    I
-                    assist in my current and past roles. Working both with <span title="big">🏢</span> and <span
-                        title="small">🏪</span> businesses globally, gives me a wide range of capabilities to best serve
+                    I assist in my current and past roles. Working both with large enterprise and small to medium sized businesses globally, gives me a wide range of capabilities to best serve
                     customers and their end users.</p>
             </div>
             <div class="right hidden">
