--- a/index.html
+++ b/index.html
@@ -108,17 +108,20 @@
         </div>
     </section>
     <section>
-        <div class="hidden contact">
-            <h2>Contact Me</h2>
-            <p>Looking for someone with my skillsets, professional exprience, something else? You can reach me below.
-            </p>
-            <h3>Phone</h3>
-            <p><a href="tel:+1-816-808-5475">+1-816-808-5475</a></p>
-            <h3>Email</h3>
-            <p><a href="mailto:chadradams@outlook.com">chadradams@outlook.com</a>
-            <h3>Social</h3>
-            <p><a href="https://www.linkedin.com/in/chadradams/" target="_blank">LinkedIn</a></p>
-            <p><a href="https://github.com/chadradams" target="_blank">GitHub</a></p>
+        <div class="container">
+            <div class="left hidden">
+                <h2>Contact Me</h2>
+                <p>Looking for someone with my skillsets, professional exprience, something else? You can reach me below.
+            </div>
+            <div class="right hidden">
+                <h3>Phone</h3>
+                <p><a href="tel:+1-816-808-5475">+1-816-808-5475</a></p>
+                <h3>Email</h3>
+                <p><a href="mailto:chadradams@outlook.com">chadradams@outlook.com</a>
+                <h3>Social</h3>
+                <p><a href="https://www.linkedin.com/in/chadradams/" target="_blank">LinkedIn</a></p>
+                <p><a href="https://github.com/chadradams" target="_blank">GitHub</a></p>
+            </div>
         </div>
     </section>
 </body>
