--- a/index.html
+++ b/index.html
@@ -104,6 +104,21 @@
             </div>
             <div class="right hidden">
                 <h3>Customers served</h3>
+                <div class="logos">
+                    <img src="assets/CDC.webp" />
+                    <img src="assets/department-of-veterans-affairs.png" />
+                    <img src="assets/Humana_logo.svg" />
+                    <img src="assets/honeywell.svg.png" />
+                    <img src="assets/MetLife_logo.svg" />
+                    <img src="assets/intouch-group.png" />
+                    <img src="assets/microsoft-logo.svg" />
+                    <img src="assets/microsoft-logo.svg" />
+                    <img src="assets/honeywell.svg.png" />
+                    <img src="assets/ncr.png" />
+                    <img src="assets/publicisgroupelogo.webp" />
+                    <img src="assets/ucmo.png" />
+                    <img src="assets/vmlyr-med.png" />
+                </div>
             </div>
         </div>
     </section>
