--- a/index.html
+++ b/index.html
@@ -95,30 +95,19 @@
 
     <section>
         <div class="container">
+            <h2>Publications</h2>
+            <p>*NOTE: These publications are now depricated due to the time since released, if you did buy a copy (thank you 🙏), and if you have any questions you can contact me using the information below. 😊</p>
             <div class="left hidden">
-                <h2>Client work</h2>
-                <p><strong>Since 2006,</strong> I've been working professionally as a user experience designer, software
-                    developer, and business analyst. Over the years my track record has improved as well as the clients
-                    I assist in my current and past roles. Working both with large enterprise and small to medium sized businesses globally, gives me a wide range of capabilities to best serve
-                    customers and their end users.</p>
+                <img alt="Book Cover" src="assets/masterjsperf.jpg" />
+                <h3>Mastering JavaScript High-Performance <small>(Released 2015)</small></h3>
+                <p>Master the art of building, deploying, and optimizing faster web applications with JavaScript.</p>
+                <a target="_blank" hreflang="en-us" href="https://www.amazon.com/Mastering-JavaScript-High-Performance-Adams/dp/1784397296/ref=sr_1_1?ie=UTF8&qid=1522164060&sr=8-1&keywords=Mastering+JavaScript+High-Performance">View on Amazon.com</a>
             </div>
-            <div class="right hidden">
-                <h3>Customers served</h3>
-                <div class="logos">
-                    <img src="assets/CDC.webp" />
-                    <img src="assets/department-of-veterans-affairs.png" />
-                    <img src="assets/Humana_logo.svg" />
-                    <img src="assets/honeywell.svg.png" />
-                    <img src="assets/MetLife_logo.svg" />
-                    <img src="assets/intouch-group.png" />
-                    <img src="assets/microsoft-logo.svg" />
-                    <img src="assets/microsoft-logo.svg" />
-                    <img src="assets/honeywell.svg.png" />
-                    <img src="assets/ncr.png" />
-                    <img src="assets/publicisgroupelogo.webp" />
-                    <img src="assets/ucmo.png" />
-                    <img src="assets/vmlyr-med.png" />
-                </div>
+            <div class="right hidden"> 
+                <img alt="Book Cover" src="assets/learnpython.jpg" />
+                <h3>Learning Python Data Visualization <small>(Released 2014)</small></h3>
+                <p>Master how to build dynamic HTML5-ready SVG charts using Python and the Pygal library.</p>
+                <a target="_blank" hreflang="en-us" href="https://www.amazon.com/Learning-Python-Data-Visualization-Adams/dp/1783553332/ref=sr_1_1_sspa?s=books&ie=UTF8&qid=1522164125&sr=1-1-spons&keywords=Learning+Python+Data+Visualization&psc=1">View on Amazon.com</a>
             </div>
         </div>
     </section>
