--- a/index.html
+++ b/index.html
@@ -92,6 +92,24 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="container">
+            <div class="left hidden">
+                <div class="panel">
+                    <img alt="Azure Fundamentals" src="certifications/microsoft-certified-azure-fundamentals (1).png" />
+                    <img alt="Azure AI Engineer" src="certifications/azure-ai-engineer-600x600.png" />
+                    <img alt="Accessibility In Action" src="certifications/accessibility-in-action.png" />
+                    <img alt="programming-in-html5-with-javascript-and-css3" src="certifications/exam-480-programming-in-html5-with-javascript-and-css3.png" />
+                    <img alt="worldwide-communities-community-sme-2019.png" src="certifications/worldwide-communities-community-sme-2019.png" />
+                    <img alt="worldwide-communities-community-sme-2018" src="certifications/worldwide-communities-community-sme-2018.png" />
+                </div>
+            </div>
+            <div class="right hidden"> 
+                <h2>Certifications</h2>
+                <p>Here are a few of my Certifications achived over the years.</p>
+            </div>
+        </div>
+    </section>
 
     <section>
         <div class="container">
