--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@
             <h2>Publications</h2>
             <p>*NOTE: These publications are now depricated due to the time since released, if you did buy a copy (thank you 🙏), and if you have any questions you can contact me using the information below. 😊</p>
             <div class="left hidden">
-                <img alt="Book Cover" src="assets/masterjsperf.jpg" />
+                <img alt="Book Cover" class="responsive" src="assets/masterjsperf.jpg" />
                 <h3>Mastering JavaScript High-Performance <small>(Released 2015)</small></h3>
                 <p>Master the art of building, deploying, and optimizing faster web applications with JavaScript.</p>
                 <a target="_blank" hreflang="en-us" href="https://www.amazon.com/Mastering-JavaScript-High-Performance-Adams/dp/1784397296/ref=sr_1_1?ie=UTF8&qid=1522164060&sr=8-1&keywords=Mastering+JavaScript+High-Performance">View on Amazon.com</a>
             </div>
             <div class="right hidden"> 
-                <img alt="Book Cover" src="assets/learnpython.jpg" />
+                <img alt="Book Cover" class="responsive" src="assets/learnpython.jpg" />
                 <h3>Learning Python Data Visualization <small>(Released 2014)</small></h3>
                 <p>Master how to build dynamic HTML5-ready SVG charts using Python and the Pygal library.</p>
                 <a target="_blank" hreflang="en-us" href="https://www.amazon.com/Learning-Python-Data-Visualization-Adams/dp/1783553332/ref=sr_1_1_sspa?s=books&ie=UTF8&qid=1522164125&sr=1-1-spons&keywords=Learning+Python+Data+Visualization&psc=1">View on Amazon.com</a>
