--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <section>
         <div class="container">
             <div class="left hidden">
-                <div class="panel">
+                <div class="box panel">
                     <img alt="Azure Fundamentals" src="certifications/microsoft-certified-azure-fundamentals (1).png" />
                     <img alt="Azure AI Engineer" src="certifications/azure-ai-engineer-600x600.png" />
                     <img alt="Accessibility In Action" src="certifications/accessibility-in-action.png" />
@@ -112,9 +112,10 @@
     </section>
 
     <section>
+        <h2>Publications</h2>
+        <p>*NOTE: These publications are now depricated due to the time since released, if you did buy a copy (thank you 🙏), and if you have any questions you can contact me using the information below. 😊</p>
         <div class="container">
-            <h2>Publications</h2>
-            <p>*NOTE: These publications are now depricated due to the time since released, if you did buy a copy (thank you 🙏), and if you have any questions you can contact me using the information below. 😊</p>
+           
             <div class="left hidden">
                 <img alt="Book Cover" class="responsive" src="assets/masterjsperf.jpg" />
                 <h3>Mastering JavaScript High-Performance <small>(Released 2015)</small></h3>
