--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 
 <body>
     <section>
-        <div></div>
+        <div>
+            <img class="portrait responsive" src="IMG_9412-Edit-min.jpg" alt="Photo of Chad Adams" />
+        </div>
         <h1 class="hidden">Hello, my name is <b>Chad Adams</b>...</h1>
     </section>
     <section>
@@ -45,9 +47,6 @@
                         improvements
                         for applications developed once completed.</p>
                     </p>
-                </div>
-                <div class="">
-                    <img class="portrait responsive" src="IMG_9412-Edit-min.jpg" alt="Photo of Chad Adams" />
                 </div>
             </div>
         </div>
