--- a/index.html
+++ b/index.html
@@ -98,9 +98,10 @@
                     <img alt="Azure Fundamentals" src="certifications/microsoft-certified-azure-fundamentals (1).png" />
                     <img alt="Azure AI Engineer" src="certifications/azure-ai-engineer-600x600.png" />
                     <img alt="Accessibility In Action" src="certifications/accessibility-in-action.png" />
+                    <img alt="Microsoft Certified- Dynamics 365 Fundamentals." src="certifications/microsoft-certified-dynamics-365-fundamentals.png" />
                     <img alt="programming-in-html5-with-javascript-and-css3" src="certifications/exam-480-programming-in-html5-with-javascript-and-css3.png" />
-                    <img alt="worldwide-communities-community-sme-2019.png" src="certifications/worldwide-communities-community-sme-2019.png" />
-                    <img alt="worldwide-communities-community-sme-2018" src="certifications/worldwide-communities-community-sme-2018.png" />
+                    <img alt="Worldwide Communities SME - 2019" src="certifications/worldwide-communities-community-sme-2019.png" />
+                    <img alt="Worldwide Communities SME - 2018" src="certifications/worldwide-communities-community-sme-2018.png" />
                 </div>
             </div>
             <div class="right hidden"> 
