--- a/index.html
+++ b/index.html
@@ -113,12 +113,13 @@
 
     <section>
         <h2>Publications</h2>
-        <p>*NOTE: These publications are now depricated due to the time since released, if you did buy a copy (thank you 🙏), and if you have any questions you can contact me using the information below. 😊</p>
+        <p>*NOTE: These publications are now depricated due to the time since released.</p>
+        <p>If you did buy a copy (thank you 🙏), and if you have any questions you can contact me using the information below.</p>
         <div class="container">
            
             <div class="left hidden">
                 <img alt="Book Cover" class="responsive" src="assets/masterjsperf.jpg" />
-                <h3>Mastering JavaScript High-Performance <small>(Released 2015)</small></h3>
+                <h3>Mastering JavaScript High-Performance <small>(Released 2015, 2nd Publishing in 2017)</small></h3>
                 <p>Master the art of building, deploying, and optimizing faster web applications with JavaScript.</p>
                 <a target="_blank" hreflang="en-us" href="https://www.amazon.com/Mastering-JavaScript-High-Performance-Adams/dp/1784397296/ref=sr_1_1?ie=UTF8&qid=1522164060&sr=8-1&keywords=Mastering+JavaScript+High-Performance">View on Amazon.com</a>
             </div>
